--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -204,3 +204,52 @@ button.nav-link
 {
     text-align: center;
 }
+
+@media screen and (max-width: 968px) {
+    .carousel-item>img {
+        height: 50vh;
+        width: 100%;
+        filter: brightness(40%);
+    }
+
+    .carousel-caption
+    {
+        width: 70%;
+    }
+
+    .featured-image
+    {
+        display: none;
+    }
+
+    .recipe-card
+    {
+        height: 200px;
+    }
+
+    .modal-body > img
+    {
+        height: 25%;
+    }
+
+    .about
+    {
+        width: 100%;
+    }
+
+    .section-about-img
+    {
+        display: none;
+    }
+
+    .section-about-text
+    {
+        width: 100%;
+    }
+
+    .contact
+    {
+        width: 100% !important;
+    }
+    
+}
